[gd_scene load_steps=12 format=2]

[ext_resource path="res://framework/resources/shapes/8/circle_8.png" type="Texture2D" id=1]
[ext_resource path="res://game/grenade.gd" type="Script" id=2]
[ext_resource path="res://framework/node_modules/squasher/Squasher.tscn" type="PackedScene" id=4]
[ext_resource path="res://framework/node_modules/audio_players/pitch_ramp_audio_player/PitchRampAudioPlayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://framework/node_modules/audio_players/detachable_audio_player/DetachableAudioPlayer.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/bomb_01.wav" type="AudioStream" id=7]
[ext_resource path="res://game/bomb_02.wav" type="AudioStream" id=8]
[ext_resource path="res://game/bomb_03.wav" type="AudioStream" id=9]
[ext_resource path="res://game/land_01.wav" type="AudioStream" id=10]
[ext_resource path="res://game/land_02.wav" type="AudioStream" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 26.0

[node name="Grenade" type="Node2D"]
script = ExtResource( 2 )
explosion_duration = 0.7
line_segment_count = 16

[node name="Visuals" type="Node2D" parent="."]

[node name="ShadowContainer" type="Node2D" parent="Visuals"]
position = Vector2( 2, -3 )

[node name="Shadow" type="Sprite2D" parent="Visuals/ShadowContainer"]
modulate = Color( 0, 0, 0, 0.490196 )
texture = ExtResource( 1 )

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
modulate = Color( 0.909804, 0.717647, 0.588235, 1 )
position = Vector2( 0, -4 )
z_index = 5
texture = ExtResource( 1 )

[node name="Squasher" parent="." instance=ExtResource( 4 )]
target = NodePath("../Visuals")

[node name="BounceSound" parent="." instance=ExtResource( 5 )]
pitch_ramp = 0.25
timed = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="BounceSound/DetachableAudioPlayer/RandomAudioPlayer" index="0"]
stream = ExtResource( 10 )
bus = "GrenadeBounce"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="BounceSound/DetachableAudioPlayer/RandomAudioPlayer" index="1"]
stream = ExtResource( 12 )
bus = "GrenadeBounce"

[node name="ExplodeSound" parent="." instance=ExtResource( 6 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ExplodeSound/RandomAudioPlayer" index="0"]
stream = ExtResource( 7 )
bus = "Game"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="ExplodeSound/RandomAudioPlayer" index="1"]
stream = ExtResource( 8 )
bus = "Game"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="ExplodeSound/RandomAudioPlayer" index="2"]
stream = ExtResource( 9 )
bus = "Game"

[node name="ExplosionLine" type="Line2D" parent="."]
visible = false
width = 1.0
default_color = Color( 0.964706, 0.458824, 0.478431, 1 )

[node name="BlastShadow" type="Polygon2D" parent="."]
position = Vector2( 2, 1 )
z_index = -8
color = Color( 0, 0, 0, 0.490196 )

[node name="ExplosionPolygon" type="Polygon2D" parent="."]
z_index = 1
color = Color( 0.964706, 0.458824, 0.478431, 1 )

[node name="ExplosionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 1 )
disabled = true

[node name="Tween" type="Tween" parent="."]

[editable path="BounceSound"]
[editable path="BounceSound/DetachableAudioPlayer"]
[editable path="BounceSound/DetachableAudioPlayer/RandomAudioPlayer"]
[editable path="ExplodeSound"]
[editable path="ExplodeSound/RandomAudioPlayer"]
